prevent page horiz. scroll with overflow-x: scroll (#2811)

--- a/apps/site/assets/css/core.scss
+++ b/apps/site/assets/css/core.scss
@@ -15,6 +15,10 @@
 html,
 body {
   @include base-font-size();
+
+  // without this, child items of elements set to overflow-x: scroll
+  // can make the page horizontally scrollable in safari
+  overflow-x: hidden;
 }
 
 html {
